--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
 contourpy==1.0.7
-cryptography==41.0.1
+cryptography==41.0.2
 cycler==0.11.0
 fonttools==4.38.0
 frozendict==2.3.4
@@ -26,6 +26,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7.1
 requests==2.31.0
+schedule==1.2.0
 six==1.16.0
 soupsieve==2.3.2.post1
 urllib3==1.26.14
