--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ numpy==1.24.1
 packaging==23.0
 pandas==1.5.3
 pandas-datareader==0.10.0
-Pillow==9.4.0
+Pillow==10.1.0
 pycparser==2.21
 pykrakenapi==0.3.1
 pyparsing==3.0.9
@@ -29,6 +29,7 @@ requests==2.31.0
 schedule==1.2.0
 six==1.16.0
 soupsieve==2.3.2.post1
+style==1.1.0
 urllib3==1.26.14
 webencodings==0.5.1
 yfinance==0.2.4
